# bilibili_project

./: .gitignore  README.md
camera_lidar_fusion/: fusion.py  o3d_fusion.py
colored_pc2_publish/: pc2_publish.py
data_example/: colors.npy  points.npy
data_example/3d_detection/: 000003.ply
data_example/DIODE_depth_prediction/scene_00019/scan_00183/: 00019_00183_indoors_000_010_depth.npy  00019_00183_indoors_000_010_depth_mask.npy  00019_00183_indoors_000_040_depth.npy  00019_00183_indoors_000_040_depth_mask.npy
data_example/camera_parameters/: D435i_color_ex.yaml  D435i_color_in.yaml
data_example/depth_completion/: render.py  rgb_train_downloader.sh  train.txt  val.txt
data_example/detection/: coco2voc.py  get_txt.py  label_list.txt  trainval.txt  voc_train.json  x2coco.py
data_example/detection/data_voc/annotations/: 000007.xml  (+4 more)
data_example/xml/: 01313.xml
data_example/xyz_points/: elephant.xyz  pig.xyz
learn_serial/: my_serial.ui  serial_utility.py  serial_utils.py  ui_my_serial.py
livox_ros/: _CustomMsg.py  livox_receiver.py  yolox_demo.py
py_cpp_qt_combine/: main.py  sub.py  winId.txt
py_cpp_qt_combine/cpp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
qt_ros/: ros_pub_example.py  vis_example.py
qt_ros/my_example/: README.md  example.ui  main.py  ui_example.py
ros_detection/: centernet_ros.py  image_publisher.py  yolov4_ros.py  yolox_ros.py
ros_udp_bridge/: ros_publishers.py  ros_udp.py  udp_receivers.py
zmq_example/: CMakeLists.txt  client1.c  client2.c  server1.c  utils.h  zhelpers.h
